Draggable and centered column summaries
Former-commit-id: ed9a2ebdda4c6b8b3e73114e0c2744afc1bae1a1

--- a/intermine/webapp/main/resources/webapp/css/resultstables.css
+++ b/intermine/webapp/main/resources/webapp/css/resultstables.css
@@ -5,10 +5,16 @@ td.resBar {
 /* =DIV £OBJECTDETAILSTEMPLATETABLE
 -------------------------------------- */
 #summary {
-  top:360px; left:40%; position:absolute;
+  position:absolute;
   min-width:100px; padding:5px;
-  background-color:#fff; border: solid black 1px;}
+  background-color:#fff; border: solid #CCC 1px;}
 
+#summary_loading {
+  width:200px;
+  height:50px;
+  padding-top:15px;
+  text-align: center;
+}
 /* template results - used by object & bag details pages */
 /* =TABLE */
 table.refSummary {
