more consistent look for the bag details page
Former-commit-id: ba65ece9df9b0444e65ebd9c970aef698d9d314d

--- a/intermine/webapp/main/resources/webapp/css/bagDetails.css
+++ b/intermine/webapp/main/resources/webapp/css/bagDetails.css
@@ -38,7 +38,11 @@ li {
   
 .listtoolbox { 
   padding: 0 10px 10px 10px; margin: 0 15px 15px 15px;
-  background-color: #F5F0FF; vertical-align: middle; text-align: left;}
+  background-image: url('../images/widget_bg.png');
+  background-repeat: repeat-x;
+  background-position: bottom;
+  border:1px solid #D0B5D7;
+  vertical-align: middle; text-align: left;}
   
 .listtoolbox h3, #bagDescriptionDiv h3 {
   color:#333; font-size:1.2em;}
