--- a/intermine/webapp/main/resources/webapp/css/bagDetails.css
+++ b/intermine/webapp/main/resources/webapp/css/bagDetails.css
@@ -61,3 +61,9 @@ table.listinfotable tr td.infotitle {
     color:#5C0075;
     padding-right:10px;
 }
+ol.widgetList li {
+    float:left;
+}
+.active, a:link.active, a:visited.active {
+    font-weight: bold;
+}
