Added close buton to the widgets
Former-commit-id: 670b95f5762aeefb57c2554cb3ca93ac7fafce88

--- a/intermine/webapp/main/resources/webapp/css/bagDetails.css
+++ b/intermine/webapp/main/resources/webapp/css/bagDetails.css
@@ -63,7 +63,17 @@ table.listinfotable tr td.infotitle {
 }
 ol.widgetList li {
     float:left;
+    margin-bottom:5px;
 }
 .active, a:link.active, a:visited.active {
-    font-weight: bold;
+    background-color:#9F67AD;
+    color:white;
+    padding:0 3px 0 3px;
+    /*font-weight: bold;*/
+}
+span.widgetcloser{
+    float:right;
+    padding:0;
+    margin:-5px 0;
+    font-size:0.9em;
 }
