--- a/intermine/webapp/main/resources/webapp/css/begin.css
+++ b/intermine/webapp/main/resources/webapp/css/begin.css
@@ -23,8 +23,7 @@ div.frontBoxList {
 #qbImport {
 	margin-top:10px;}
 
-#what {
-	font-size:+2em;}
-
-#intro {
-	font-size: +1.2em;}
+ol#news li {
+    line-height: 20px;
+    list-style: disc;
+}
