--- a/unimine/webapp/resources/webapp/css/enrichmentWidget.css
+++ b/unimine/webapp/resources/webapp/css/enrichmentWidget.css
@@ -5,7 +5,7 @@ html, body
   margin: 0px;
   padding: 0px;
   color:#333;
-  background-color:#f5f0ff;
+  background-color:#F5FFF3;
 }
 
 a:link { color:#049; text-decoration:none }
