--- a/unimine/webapp/resources/webapp/css/query.css
+++ b/unimine/webapp/resources/webapp/css/query.css
@@ -40,7 +40,7 @@ div.sortorder {
 div.sortorderpath {
   float: left; width: 250px;
   padding: 5px; margin-right: 5px; margin-bottom: 5px;
-  background-color: #F5F0FF; color: #660099; border: 1px solid #bbb; text-align: center; font-size: 11px; cursor: hand;}
+  background-color: #F5FFF3; color: #015E3A; border: 1px solid #bbb; text-align: center; font-size: 11px; cursor: hand;}
  
 .showing {
   padding: 1px 0 1px 3px; margin-left: 3px; margin-right: 3px;
