--- a/unimine/webapp/resources/webapp/css/tips.css
+++ b/unimine/webapp/resources/webapp/css/tips.css
@@ -1,7 +1,7 @@
 #tipbox {
 	padding:10px;width:250px;margin-right:5px;
- 	background-color:#F5F0FF;float:right;}
+ 	background-color:#D0FFE7;float:right;}
 
 #tipbox h3 {
 	margin:0px 0px 5px 0px;
-	background:none;color:#5C0075;}
+	background:none;color:#015E3A;}
