When going from the object details page to the list page, highlight the object in the list. Refs #1662.
Former-commit-id: f458707bbed034309a8d50b693a523b2d0bba692

--- a/intermine/webapp/main/resources/webapp/css/resultstables.css
+++ b/intermine/webapp/main/resources/webapp/css/resultstables.css
@@ -94,3 +94,11 @@ table.results th.checkbox,table.results td.checkbox{
 table.results tr td.highlightCell { 
 	background-color: #FFCBFF; 
 }
+
+table.results tr td.noHighlightObject {
+    /* none */
+}
+
+table.results tr td.highlightObject {
+    background-color: yellow;
+}
