added new ccs style
Former-commit-id: d70bb1d5a552c98974c552c063a336f663e9b9db

--- a/unimine/webapp/resources/webapp/css/webapp.css
+++ b/unimine/webapp/resources/webapp/css/webapp.css
@@ -35,6 +35,9 @@ ul#submenulist li a {
 /* =H */
 h1, h2, h3, h1 a, h1 a:visited, label {
    color:#015E3A; }
+/* =H */
+h1, h2, h3, h1 a, h1 a:link, label {
+   color:#015E3A; }
 
 /* =IMG */
 img {
