Toned down the highlight colour "Find in list". Refs #1662.
Former-commit-id: 3fbc1efca8543edbc5b8ab0c5d7f5659a868a0b5

--- a/intermine/webapp/main/resources/webapp/css/resultstables.css
+++ b/intermine/webapp/main/resources/webapp/css/resultstables.css
@@ -100,5 +100,5 @@ table.results tr td.noHighlightObject {
 }
 
 table.results tr td.highlightObject {
-    background-color: yellow;
+    background-color: #ee6;
 }
