--- a/intermine/webapp/main/resources/webapp/themes/ratmine/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/ratmine/theme.css
@@ -169,10 +169,10 @@ div#filter_tool_bar {
   background: #FFF url('blue_grad.png') repeat-x top left;
 }
 #tool_bar_div {
-    background-color:#CACACA;
+    background-color:#E0E0E0;
 }
 .tb_button {
-  border:1px solid #CACACA;
+  border:1px solid #E0E0E0;
 }
 .tb_button:hover {
   margin-right:0;
