--- a/intermine/webapp/main/resources/webapp/themes/brown/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/brown/theme.css
@@ -357,7 +357,7 @@ div.collection-table thead th,
 div.collection-table thead td { background:#EBEBEB; border-color:#F0F0F0; }
 div.collection-table table tbody tr:nth-child(2n) td,
 div.collection-table table tbody tr.odd td { background:#FAFAFA; border-top-color:#F0F0F0; border-bottom-color:#F0F0F0; }
-div.collection-table table tbody tr.even td { background:#FFF; }
+div.collection-table table tbody tr:nth-child(2n+1) td { background:#FFF; }
 div.collection-table table td.class { color:#886644; }
 div.collection-table table a,
 div.collection-table table a:hover,
