--- a/intermine/webapp/main/resources/webapp/themes/metabolic/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/metabolic/theme.css
@@ -251,7 +251,7 @@ div.collection-table thead th,
 div.collection-table thead td { background:#F5F5F5; border-color:#E6F7FE; }
 div.collection-table table tbody tr:nth-child(2n) td,
 div.collection-table table tbody tr.odd td { background:#F6FCFE; border-top-color:#E6F7FE; border-bottom-color:#E6F7FE; }
-div.collection-table table tbody tr.even td { background:#FFF; }
+div.collection-table table tbody tr:nth-child(2n+1) td { background:#FFF; }
 div.collection-table table td.class { color:#886644; }
 div.collection-table table a,
 div.collection-table table a:hover,
