--- a/intermine/webapp/main/resources/webapp/themes/gold/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/gold/theme.css
@@ -339,7 +339,7 @@ div.collection-table thead th,
 div.collection-table thead td { background:#F7F1EE; border-color:#F7F5DA; }
 div.collection-table table tbody tr:nth-child(2n) td,
 div.collection-table table tbody tr.odd td { background:#FEFEF6; border-top-color:#F7F5DA; border-bottom-color:#F7F5DA; }
-div.collection-table table tbody tr:nth-child(2n+1) td { background:#FFF; }
+div.collection-table table tbody tr.even td { background:#FFF; }
 div.collection-table table td.class { color:#886644; }
 div.collection-table table a,
 div.collection-table table a:hover,
