--- a/intermine/webapp/main/resources/webapp/css/webapp.css
+++ b/intermine/webapp/main/resources/webapp/css/webapp.css
@@ -1502,13 +1502,12 @@ div.inline-list div.right { display:inline; float:right; font-size:13px; }
 div.collection-table { margin-bottom:30px; }
 div.collection-table h3 { margin:0; border-top-width:1px; border-top-style:solid; padding:2px 6px; font-size:14px; }
 div.collection-table div.right { display:inline; float:right; font-size:13px; }
-div.collection-table table { width:100%; border-spacing:0; border-collapse:collapse; }
+div.collection-table table { width:100%; border-spacing:0; border-bottom-width:1px; border-bottom-style:solid; }
 div.collection-table table th { padding:6px; font-size:12px; vertical-align:bottom; text-align:left; }
 div.collection-table table td { padding:3px 6px; font-size:12px; }
 div.collection-table table thead th,
-div.collection-table table thead td { font-weight:normal; border-bottom-width:1px; border-bottom-style:solid; font-size:13px; padding:2px 6px; text-align:left; }
-div.collection-table table tbody tr:nth-child(2n) td,
-div.collection-table table tbody tr.odd td { border-top-width:1px; border-top-style:solid; border-bottom-width:1px; border-bottom-style:solid; }
+div.collection-table table thead td { font-weight:normal; font-size:13px; padding:2px 6px; text-align:left; }
+div.collection-table table tbody tr td { border-top-width:1px; border-top-style:solid; }
 div.collection-table img { vertical-align:top; }
 div.collection-table.column-border table tbody tr td.left-column-border { border-left-width:1px; border-left-style:solid; }
 div.collection-table.column-border table tbody tr td:nth-child(n+2) { border-left-width:1px; border-left-style:solid; }
@@ -1531,7 +1530,7 @@ div.collection-table.results table th:not(:last-child) { border-right-width:1px;
 /* basic tables (on displayers etc.) */
 div.basic-table h3 { margin:0; border-top-width:1px; border-top-style:solid; padding:2px 6px; font-size:14px; }
 div.basic-table div.right { display:inline; float:right; font-size:13px; }
-div.basic-table table { border-spacing:0; border-collapse:collapse; }
+div.basic-table table { border-spacing:0; }
 div.basic-table table th,
 div.basic-table table td { padding:2px 2px 2px 6px; }
 div.basic-table table th { padding-top:6px; text-align:left; }
