--- a/intermine/webapp/main/resources/webapp/themes/blue/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/blue/theme.css
@@ -420,10 +420,12 @@ div.collection-table h3 { background:#EEF0F7; border-top-color:#002575; color:#0
 div.collection-table div.right a,
 div.collection-table div.right a:hover,
 div.collection-table div.right a:visited { color:#002575; }
+div.collection-table table { border-color:#E2F5FE; }
 div.collection-table thead th,
 div.collection-table thead td { background:#EEF0F7; border-color:#E2F5FE; }
+div.collection-table table tbody tr td { border-top-color:#E2F5FE; }
 div.collection-table table tbody tr:nth-child(2n) td,
-div.collection-table table tbody tr.odd td { background:#FBFDFE; border-top-color:#E2F5FE; border-bottom-color:#E2F5FE; }
+div.collection-table table tbody tr.odd td { background:#FBFDFE; }
 div.collection-table table tbody tr.even td { background:#FFF; }
 div.collection-table table td.class { color:#886644; }
 div.collection-table table a,
