--- a/intermine/webapp/main/resources/webapp/themes/gold/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/gold/theme.css
@@ -335,10 +335,12 @@ div.collection-table h3 { background:#F7F1EE; border-top-color:#662F2E; color:#6
 div.collection-table div.right a,
 div.collection-table div.right a:hover,
 div.collection-table div.right a:visited { color:#662F2E; }
+div.collection-table table { border-color:#F7F5DA; }
 div.collection-table thead th,
 div.collection-table thead td { background:#F7F1EE; border-color:#F7F5DA; }
+div.collection-table table tbody tr td { border-top-color:#F7F5DA; }
 div.collection-table table tbody tr:nth-child(2n) td,
-div.collection-table table tbody tr.odd td { background:#FEFEF6; border-top-color:#F7F5DA; border-bottom-color:#F7F5DA; }
+div.collection-table table tbody tr.odd td { background:#FEFEF6; }
 div.collection-table table tbody tr.even td { background:#FFF; }
 div.collection-table table td.class { color:#886644; }
 div.collection-table table a,
