--- a/intermine/webapp/main/resources/webapp/themes/green/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/green/theme.css
@@ -301,10 +301,12 @@ div.collection-table h3 { background:#F0FCEC; border-top-color:#5E665C; color:#5
 div.collection-table div.right a,
 div.collection-table div.right a:hover,
 div.collection-table div.right a:visited { color:#5E665C; }
+div.collection-table table { border-color:#DBEED6; }
 div.collection-table thead th,
 div.collection-table thead td { background:#F0FCEC; border-color:#DBEED6; }
+div.collection-table table tbody tr td { border-top-color:#DBEED6; }
 div.collection-table table tbody tr:nth-child(2n) td,
-div.collection-table table tbody tr.odd td { background:#F9FFF7; border-top-color:#DBEED6; border-bottom-color:#DBEED6; }
+div.collection-table table tbody tr.odd td { background:#F9FFF7; }
 div.collection-table table tbody tr.even td { background:#FFF; }
 div.collection-table table td.class { color:#886644; }
 div.collection-table table a,
