--- a/intermine/webapp/main/resources/webapp/themes/grey/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/grey/theme.css
@@ -324,10 +324,12 @@ div.collection-table h3 { background:#EBEBEB; border-top-color:#004499; color:#0
 div.collection-table div.right a,
 div.collection-table div.right a:hover,
 div.collection-table div.right a:visited { color:#004499; }
+div.collection-table table { border-color:#F0F0F0; }
 div.collection-table thead th,
 div.collection-table thead td { background:#EBEBEB; border-color:#F0F0F0; }
+div.collection-table table tbody tr td { border-top-color:#F0F0F0; }
 div.collection-table table tbody tr:nth-child(2n) td,
-div.collection-table table tbody tr.odd td { background:#FAFAFA; border-top-color:#F0F0F0; border-bottom-color:#F0F0F0; }
+div.collection-table table tbody tr.odd td { background:#FAFAFA; }
 div.collection-table table tbody tr.even td { background:#FFF; }
 div.collection-table table td.class { color:#886644; }
 div.collection-table table a,
