--- a/intermine/webapp/main/resources/webapp/themes/metabolic/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/metabolic/theme.css
@@ -247,10 +247,12 @@ div.collection-table h3 { background:#F5F5F5; border-top-color:#1F7492; color:#1
 div.collection-table div.right a,
 div.collection-table div.right a:hover,
 div.collection-table div.right a:visited { color:#1F7492; }
+div.collection-table table { border-color:#E6F7FE; }
 div.collection-table thead th,
 div.collection-table thead td { background:#F5F5F5; border-color:#E6F7FE; }
+div.collection-table table tbody tr td { border-top-color:#E6F7FE; }
 div.collection-table table tbody tr:nth-child(2n) td,
-div.collection-table table tbody tr.odd td { background:#F6FCFE; border-top-color:#E6F7FE; border-bottom-color:#E6F7FE; }
+div.collection-table table tbody tr.odd td { background:#F6FCFE; }
 div.collection-table table tbody tr.even td { background:#FFF; }
 div.collection-table table td.class { color:#886644; }
 div.collection-table table a,
