--- a/intermine/webapp/main/resources/webapp/themes/purple/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/purple/theme.css
@@ -294,10 +294,12 @@ div.collection-table h3 { background:#F4EEF7; border-top-color:#5C0075; color:#5
 div.collection-table div.right a,
 div.collection-table div.right a:hover,
 div.collection-table div.right a:visited { color:#5C0075; }
+div.collection-table table { border-bottom-color:#DCC8E2; }
 div.collection-table thead th,
 div.collection-table thead td { background:#F4EEF7; border-color:#DCC8E2; }
+div.collection-table table tbody tr td { border-top-color:#DCC8E2; }
 div.collection-table table tbody tr:nth-child(2n) td,
-div.collection-table table tbody tr.odd td { background:#FCFAFD; border-top-color:#DCC8E2; border-bottom-color:#DCC8E2; }
+div.collection-table table tbody tr.odd td { background:#FCFAFD; }
 div.collection-table table tbody tr.even td { background:#FFF; }
 div.collection-table table td.class { color:#886644; }
 div.collection-table table a,
