--- a/intermine/webapp/main/resources/webapp/themes/bright_blue/theme.css
+++ b/intermine/webapp/main/resources/webapp/themes/bright_blue/theme.css
@@ -298,6 +298,7 @@ div.collection-table h3 { background:#E6F0E4; border-top-color:#002575; color:#0
 div.collection-table div.right a,
 div.collection-table div.right a:hover,
 div.collection-table div.right a:visited { color:#002575; }
+div.collection-table table { border-bottom-color:#DFF0DD; }
 div.collection-table thead th,
 div.collection-table thead td { background:#E6F0E4; border-color:#DFF0DD; }
 div.collection-table table tbody tr td { border-top-color:#DFF0DD; }
